--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "bchaddrjs-slp": "^0.2.5",
     "bignumber.js": "^4.1.0",
     "bip39": "^2.5.0",
-    "bitbox-sdk": "^2.1.1",
+    "bitbox-sdk": "^2.2.2",
     "bluebird": "^3.5.2",
     "bn.js": "^4.11.7",
     "boron": "^0.2.3",
@@ -254,6 +254,11 @@
     "envify": "^4.0.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-15": "^1.1.1",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-chai": "0.0.1",
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-mocha": "^5.2.0",
@@ -306,6 +311,7 @@
     "path": "^0.12.7",
     "png-file-stream": "^1.0.0",
     "prepend-file": "^1.3.1",
+    "prettier": "^1.14.2",
     "prompt": "^1.0.0",
     "proxyquire": "2.0.1",
     "qs": "^6.5.2",
